# distopia2

./: .gitignore  .gitmodules  CMakeLists.txt
distopia/: CMakeLists.txt  __init__.py  distopia.pyx
distopia/include/: distopia.h
distopia/lib/: box.h  calc_bonds.h  distances.h  distopia_type_traits.h  example.cc  example.h  simd_swizzles.h  util.h  vector_triple.h
distopia/libdistopia/include/: distopia.h
distopia/tests/: fixtures.h  test_mda_match.cpp  test_utils.h  tests.cpp  unit_tests.cpp
libdistopia/: CMakeLists.txt
libdistopia/libdistopia/include/: distopia.h
libdistopia/libdistopia/lib/: calc_bonds.cpp  calc_bonds_dispatch.cpp  calc_bonds_dispatch.h  dispatch_helpers.h  distopia_type_traits.h  simd_dispatch.h
libdistopia/tests/: benchmark.cpp  unit_tests.cpp
python/: CMakeLists.txt  distopia.pyx  setup.py
python/distopia/: __init__.py  libdistopia.cpp  libdistopia.pyx
python/distopia.egg-info/: PKG-INFO  SOURCES.txt
